[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/bridge.png" type="Texture" id=1]
[ext_resource path="res://fonts/Silkscreen_Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/puppy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66, 45 )

[node name="Puppy" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -46 )
shape = SubResource( 1 )

[node name="DogSprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="ActionLabel" type="Label" parent="."]
margin_left = -185.0
margin_top = -189.0
margin_right = 190.0
margin_bottom = -124.0
custom_fonts/font = ExtResource( 2 )
text = "Press E to
kick the puppy"
align = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_ony_body_exited"]
